// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment renders default 1`] = `
<Commentable
  comment={
    Object {
      "body": "",
      "create": 0,
      "downvotes": 0,
      "replies": null,
      "upvotes": 0,
    }
  }
  owner={Object {}}
/>
`;

exports[`Comment renders with replies 1`] = `
<Commentable
  comment={
    Object {
      "replies": "foo",
    }
  }
  owner={Object {}}
>
  <Connect(Replies)
    id="foo"
  />
</Commentable>
`;
